# element-web

./: .babelrc  .bounty_pr.json  .browserslistrc  .dockerignore  .editorconfig  .env.example  .env.tunetalks  .eslintignore  .eslintignore.errorfiles  .eslintrc  .eslintrc-module_system.js  .eslintrc.cjs  .eslintrc.js  .flowconfig  .git-blame-ignore-revs  .gitignore  .lintstagedrc  .modernizr.json  .npmignore  .percy.yml  .prettierignore  .prettierrc.js  .stylelintrc.cjs  .stylelintrc.js  .travis-test-riot.sh  .travis.yml  AGENTS.md  AUTHORS.rst  CHANGELOG.md  CHANGES.rst  CLAP_README.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  Dockerfile.develop  Dockerfile.test  Dockerfile.tunetalks  Dockerfile.webapp  ISSUE_TEMPLATE.md  (+100 more)
.buildkite/: pipeline.yaml
.claude/: launch.json
.devcontainer/: .gitignore  devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SSLcom-sandbox.crt  cfp_headers  codecov.yml  labels.yml  r2_cors.json  r2_cors.yaml  release-drafter.yml  (+2 more)
modules/restricted-guests/synapse/: .dockerignore  CHANGELOG.md  Dockerfile  LICENSE-COMMERCIAL  README.md  mypy.ini  package.json  pyproject.toml  setup.cfg  tox.ini
modules/restricted-guests/synapse/scripts/: run_in_venv.js  run_in_venv.sh
modules/restricted-guests/synapse/synapse_guest_module/: __init__.py  config.py  guest_module.py  guest_registration_servlet.py  guest_user_reaper.py  mas_admin_client.py
modules/restricted-guests/synapse/tests/: __init__.py  test_guest_module.py  test_guest_registration_servlet.py  test_guest_user_reaper.py
(+13122 files in other folders)
