[metadata]
name = synapse_guest_module
description = A synapse module to restrict the actions of guests
long_description = file: README.md
long_description_content_type = text/markdown
version = 2.0.0

classifiers =
  License :: OSI Approved :: Apache Software License


[options]
packages =
  synapse_guest_module
python_requires = >= 3.7
install_requires =
  attrs


[options.package_data]
synapse_guest_module = py.typed


[options.extras_require]
dev =
  # for tests
  matrix-synapse
  tox
  twisted
  aiounittest
  # for type checking
  mypy == 1.10.0
  pydantic == 2.4.2
  # for linting
  black == 22.3.0
  flake8 == 4.0.1
  isort == 5.9.3


[flake8]
# see https://pycodestyle.readthedocs.io/en/latest/intro.html#error-codes
# for error codes. The ones we ignore are:
#  W503: line break before binary operator
#  W504: line break after binary operator
#  E203: whitespace before ':' (which is contrary to pep8?)
#  E501: Line too long (black enforces this for us)
# (this is a subset of those ignored in Synapse)
ignore=W503,W504,E203,E501
